// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DepositDataRegistry deposit data manager update succeeds 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 63721,
}
`;

exports[`DepositDataRegistry deposit data root update success 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 64529,
}
`;

exports[`DepositDataRegistry migrate succeeds 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 164874,
}
`;

exports[`DepositDataRegistry multiple validators succeeds 1`] = `
Object {
  "calldataByteLength": 3364,
  "gasUsed": 688151,
}
`;

exports[`DepositDataRegistry single validator can update state and register validator 1`] = `
Object {
  "calldataByteLength": 1636,
  "gasUsed": 407161,
}
`;

exports[`DepositDataRegistry single validator succeeds 1`] = `
Object {
  "calldataByteLength": 1156,
  "gasUsed": 333777,
}
`;
